--- a/index.html
+++ b/index.html
@@ -5,26 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <title>로핑</title>
 </head>
 <body>
-    <header>
-        <h1 class="logo"><img src="" alt="logo">로고</h1>
-        <nav class="main_menu">
-            <ul class="sub_menu">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <ul class="menu_list">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
-    </header>
     
 </body>
 </html>
