--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font.css">
+    <script src="script.js"></script>
     <title>로핑</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <h1><img src="img/logo.png" alt="logo"><a href="#"></a></h1>
+            <ul class="menu">
+                <li><a href="">TOP</a></li>
+                <li><a href="">SHIRTS</a></li>
+                <li><a href="">PANTS</a></li>
+                <li><a href="">SHOES</a></li>
+                <li><a href="">ETC</a></li>
+            </ul>
+            <ul class="link">
+                <li><a href="">로그인</a></li>
+                <li><a href="">회원가입</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
