--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font.css">
     <script src="script.js"></script>
-    <title>로핑</title>
+    <title>맨쇼</title>
 </head>
 <body>
     <header>
         <nav>
             <h1><img src="img/logo.png" alt="logo"><a href="#"></a></h1>
             <ul class="menu">
+                <li><a href="">OUTER</a></li>
                 <li><a href="">TOP</a></li>
-                <li><a href="">SHIRTS</a></li>
                 <li><a href="">PANTS</a></li>
                 <li><a href="">SHOES</a></li>
                 <li><a href="">ETC</a></li>
@@ -27,6 +27,10 @@
             </ul>
         </nav>
     </header>
+
+    <section>
+        
+    </section>
     
 </body>
 </html>
