--- a/index.html
+++ b/index.html
@@ -15,21 +15,30 @@
         <nav>
             <h1><img src="img/logo.png" alt="logo"><a href="#"></a></h1>
             <ul class="menu">
-                <li><a href="">OUTER</a></li>
-                <li><a href="">TOP</a></li>
-                <li><a href="">PANTS</a></li>
-                <li><a href="">SHOES</a></li>
-                <li><a href="">ETC</a></li>
+                <li><a href="">SHOP</a></li>
+                <li><a href="">BEST</a></li>
+                <li><a href="">SALE</a></li>
+                <li><a href="">CODY</a></li>
+                <li><a href="">COMMUNITY</a></li>
             </ul>
             <ul class="link">
-                <li><a href="">로그인</a></li>
-                <li><a href="">회원가입</a></li>
+                <li><a href="">LOGIN</a></li>
+                <li><a href="">SIGN UP</a></li>
             </ul>
         </nav>
     </header>
 
-    <section>
-        
+    <section class="content">
+        <div class="slide-banner">
+            <img src="" alt="배너1">
+            <img src="" alt="배너2">
+        </div>
+        <div class="best-product">
+
+        </div>
+        <div class="discount-product">
+
+        </div>
     </section>
     
 </body>
